add mongo auth prod

--- a/.env
+++ b/.env
@@ -7,4 +7,4 @@ MONGO_URI=mongodb://localhost:27017
 DATABASE_NAME=goodpack
 
 # Production MongoDB (uncomment for production)
-# MONGO_URI=mongodb://username:password@localhost:27017/goodpack?authSource=admin
+MONGO_URI=mongodb://username:password@localhost:27017/goodpack?authSource=admin
