--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,70 @@
+# Environment variables
 .env
+.env.local
+.env.development
+.env.production
+
+# Go build artifacts
+*.exe
+*.exe~
+*.dll
+*.so
+*.dylib
+*.test
+*.out
+go.work
+
+# Go module cache
+go.sum
+
+# IDE and editor files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Build directories
+build/
+dist/
+bin/
+
+# Coverage reports
+coverage.out
+coverage.html
+
+# Air live reload
+tmp/
+
+# Uploads (if you want to ignore uploaded files)
+# uploads/
+# But keep the directory structure
+uploads/*
+!uploads/.gitkeep
+
+# Server specific
+server
+*.pid
