--- a/.env
+++ b/.env
@@ -1,10 +1,12 @@
 # Server Configuration
 PORT=8080
-ENVIRONMENT=development
+ENVIRONMENT=production
 
 # MongoDB Configuration
+# For local MongoDB without authentication:
 MONGO_URI=mongodb://localhost:27017
-DATABASE_NAME=goodpack
 
-# Production MongoDB (uncomment for production)
-MONGO_URI=mongodb://username:password@localhost:27017/goodpack?authSource=admin
+# For MongoDB with authentication, use this format:
+MONGO_URI=mongodb://root:root123@localhost:27017/goodpack?authSource=admin
+
+DATABASE_NAME=goodpack
